--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family     "MesloLGS NF"
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+font_family      MesloLGS NF
+# bold_font        "MesloLGS NF bold"
+# italic_font      "MesloLGS NF Italic"
+# bold_italic_font "MesloLGS NF Bold Italic"
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -1760,6 +1760,10 @@ font_size 14.0
 
 #: Window management {{{
 
+map ctrl+command+k neighboring_window up
+map ctrl+command+j neighboring_window down
+map ctrl+command+h neighboring_window left
+map ctrl+command+l neighboring_window right
 #: New window
 
 # map kitty_mod+enter new_window
