--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1764,6 +1764,10 @@ map ctrl+command+k neighboring_window up
 map ctrl+command+j neighboring_window down
 map ctrl+command+h neighboring_window left
 map ctrl+command+l neighboring_window right
+map ctrl+left resize_window narrower
+map ctrl+right resize_window wider
+map ctrl+up resize_window taller
+map ctrl+down resize_window shorter
 #: New window
 
 # map kitty_mod+enter new_window
