UPDATE kitty config

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -348,7 +348,7 @@ font_size 14.0
 #: URLs under the mouse cursor. By default, all characters that are
 #: legal in URLs are allowed.
 
-# copy_on_select no
+copy_on_select yes
 
 #: Copy to clipboard or a private buffer on select. With this set to
 #: clipboard, selecting text with the mouse will cause the text to be
@@ -1426,7 +1426,7 @@ font_size 14.0
 #: background_opacity. If you want to use both, you are probably
 #: better off just hiding the titlebar with hide_window_decorations.
 
-# macos_option_as_alt no
+macos_option_as_alt yes
 
 #: Use the Option key as an Alt key on macOS. With this set to no,
 #: kitty will use the macOS native Option+Key to enter Unicode
@@ -1585,7 +1585,7 @@ font_size 14.0
 #: The full list of actions that can be mapped to key presses is
 #: available here <https://sw.kovidgoyal.net/kitty/actions/>.
 
-# kitty_mod ctrl+shift
+kitty_mod option
 
 #: Special modifier key alias for default shortcuts. You can change
 #: the value of this option to alter all default shortcuts that use
@@ -1760,18 +1760,17 @@ font_size 14.0
 
 #: Window management {{{
 
-map ctrl+command+k neighboring_window up
-map ctrl+command+j neighboring_window down
-map ctrl+command+h neighboring_window left
-map ctrl+command+l neighboring_window right
-map ctrl+left resize_window narrower
-map ctrl+right resize_window wider
-map ctrl+up resize_window taller
-map ctrl+down resize_window shorter
+map kitty_mod+k neighboring_window up
+map kitty_mod+j neighboring_window down
+map kitty_mod+h neighboring_window left
+map kitty_mod+l neighboring_window right
+map kitty_mod+left resize_window narrower
+map kitty_mod+right resize_window wider
+map kitty_mod+up resize_window taller
+map kitty_mod+down resize_window shorter
 #: New window
 
-# map kitty_mod+enter new_window
-# map cmd+enter       new_window
+map kitty_mod+enter new_window
 
 #::  You can open a new kitty window running an arbitrary program, for
 #::  example::
