FEAT add nushell

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      MesloLGS NF
+font_family      FiraCode Nerd Font
 # bold_font        "MesloLGS NF bold"
 # italic_font      "MesloLGS NF Italic"
 # bold_italic_font "MesloLGS NF Bold Italic"
@@ -1135,7 +1135,7 @@ copy_on_select yes
 
 #: Advanced {{{
 
-# shell .
+shell /opt/homebrew/bin/nu
 
 #: The shell program to execute. The default value of . means to use
 #: whatever shell is set as the default shell for the current user.
