--- a/.ideavimrc
+++ b/.ideavimrc
@@ -33,7 +33,7 @@ nnoremap <c-k> <c-w>k
 " which key
 let mapleader=" "
 map <leader>c <Action>(CloseContent)
-nnoremap <leader>w :update<cr>
+nnoremap <leader>w :action SaveDocument<CR>
 map <leader>n :NERDTreeFocus<CR>
 map <leader>f <Action>(SearchEverywhere)
 map <leader>ls <Action>(RenameElement)
@@ -56,7 +56,7 @@ let g:WhichKeyDesc_buffer_splitvertically= "<Space>bv  Split Vertically"
 let g:WhichKeyDesc_buffer_movetoopposite= "<Space>bl  Move to Opposite"
 
 " tab
-nnoremap L <Action>(NextTab)
-nnoremap H <Action>(PreviousTab)
+nmap L <Action>(NextTab)
+nmap H <Action>(PreviousTab)
 
 inoremap jk <Esc>
