FEAT multiple dependency update

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      FiraCode Nerd Font
+font_family      "FiraCode Nerd Font"
 # bold_font        "MesloLGS NF bold"
 # italic_font      "MesloLGS NF Italic"
 # bold_italic_font "MesloLGS NF Bold Italic"
@@ -24,9 +24,8 @@ font_family      FiraCode Nerd Font
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 14.0
-
 #: Font size (in pts)
+font_size 14.0
 
 # force_ltr no
 
