FEAT fix icon && add zed

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      "FiraCode Nerd Font"
+font_family      FiraCode Nerd Font Mono
 # bold_font        "MesloLGS NF bold"
 # italic_font      "MesloLGS NF Italic"
 # bold_italic_font "MesloLGS NF Bold Italic"
@@ -24,8 +24,11 @@ font_family      "FiraCode Nerd Font"
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
+
 #: Font size (in pts)
 font_size 14.0
+
+
 
 # force_ltr no
 
@@ -59,6 +62,15 @@ font_size 14.0
 #: The syntax is::
 
 #:     symbol_map codepoints Font Family Name
+# - Use additional nerd symbols
+# See https://github.com/be5invis/Iosevka/issues/248
+# See https://github.com/ryanoasis/nerd-fonts/wiki/Glyph-Sets-and-Code-Points
+
+###########################################################
+# Symbols Nerd Font complete symbol_map
+# easily troubleshoot missing/incorrect characters with:
+#   kitty --debug-font-fallback
+###########################################################
 
 # narrow_symbols
 
