--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -50,7 +50,7 @@ format = '\[[$symbol($version)]($style)\]'
 format = '\[[$symbol$account(@$domain)(\($region\))]($style)\]'
 
 [git_branch]
-format = '[$branch(:$remote_branch)]($style) '
+format = '[$symbol$branch(:$remote_branch)]($style) '
 symbol = ' '
 
 [git_commit]
