update on zed, not usable now

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -1,11 +1,50 @@
 {
-  "theme": "Ayu Dark",
+  "theme": "Summercamp",
   "vim_mode": true,
   "buffer_font_size": 15,
   "autosave": "on_focus_change",
   "format_on_save": "on",
-  "buffer_font_family": "FiraCode Nerd Font",
+  "buffer_font_family": "Monaspace Neon",
   "terminal": {
-    "font_family": "FiraCode Nerd Font"
+    "font_family": "Monaspace Neon"
+  },
+  "hour_format": "hour24",
+  "lsp": {
+    "gopls": {
+      "initialization_options": {
+        "hints": {
+          "assignVariableTypes": true,
+          "compositeLiteralFields": true,
+          "compositeLiteralTypes": true,
+          "constantValues": true,
+          "functionTypeParameters": true,
+          "parameterNames": true,
+          "rangeVariableTypes": true
+        }
+      }
+    },
+    "rust-analyzer": {
+      "initialization_options": {
+        "checkOnSave": {
+          "command": "clippy"
+        },
+        "inlayHints": {
+          "maxLength": null,
+          "lifetimeElisionHints": {
+            "useParameterNames": true,
+            "enable": "skip_trivial"
+          },
+          "closureReturnTypeHints": {
+            "enable": "always"
+          }
+        }
+      }
+    }
+  },
+  "inlay_hints": {
+    "enabled": true,
+    "show_type_hints": true,
+    "show_parameter_hints": true,
+    "show_other_hints": true
   }
 }
